--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <img src="https://i.postimg.cc/pdZY58XC/2-wine.png" alt="Wine" />
         </div>
         <div class="drink-card" data-drink="cocktail">
-          <img src="https://i.postimg.cc/4dxv6dYg/3-cocktail.png" alt="Cocktail" />
+          <img src="https://i.postimg.cc/RhbK76hH/3-cocktail.png" alt="Cocktail" />
         </div>
         <div class="drink-card" data-drink="shot">
           <img src="https://i.postimg.cc/k59v5w9D/4-shot.png" alt="Shot" />
