--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
       <div class="result-block">
         <div id="resultHours" class="result-time">0h</div>
-        <div class="result-label">Until legal alcohol limit</div>
+        <div class="result-label">Until safe to drive</div>
       </div>
 
       <section class="drink-selection">
