--- a/index.html
+++ b/index.html
@@ -20,10 +20,9 @@
     <main class="container">
       <header class="header">
         <h1 class="title">Sober</h1>
-        <button class="settings-btn" onclick="window.location.href='settings.html'">
-  	<img src="https://i.postimg.cc/9FnMxfzp/settings-24px-x3.png" alt="Settings" />
+        <button class="settings-btn">
+          <img src="https://i.postimg.cc/9FnMxfzp/settings-24px-x3.png" alt="Settings" />
         </button>
-
       </header>
 
       <div class="result-block">
