--- a/settings.html
+++ b/settings.html
@@ -1,61 +1,47 @@
 <!DOCTYPE html>
-<html lang="en" data-theme="auto">
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Settings</title>
-  <link rel="stylesheet" href="styles.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Unbounded:wght@400;700&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div class="settings-container">
-    <a href="index.html" class="back-icon">
-      <img src="https://i.postimg.cc/ZKRnFNYn/close-24-px-x3.png" alt="Back" />
-    </a>
-    <h1>Settings</h1>
+  <main class="container">
+    <header class="header">
+      <h1 class="title">Settings</h1>
+      <button class="close-btn" onclick="goBack()">
+        <img src="https://i.postimg.cc/ZKRnFNYn/close-24-px-x3.png" alt="Close" />
+      </button>
+    </header>
 
-    <div class="setting-group">
-      <label for="gender">Gender</label>
-      <select id="gender">
-        <option value="male">Male</option>
-        <option value="female">Female</option>
-      </select>
-    </div>
-    <hr />
+    <div class="result-label">Blood alcohol concentration, ‰</div>
+    <section class="quantity-control">
+      <div class="quantity-option selected" data-qty="0.0">0.0</div>
+      <div class="quantity-option" data-qty="0.2">0.2</div>
+    </section>
 
-    <div class="setting-group">
-      <label for="age">Age</label>
-      <input type="number" id="age" min="0" />
-    </div>
-    <hr />
+    <div class="separator"></div>
 
-    <div class="setting-group">
-      <label for="weight">Weight (kg)</label>
-      <input type="number" id="weight" min="0" />
-    </div>
-    <hr />
+    <div class="result-label">Gender</div>
+    <section class="quantity-control">
+      <div class="quantity-option selected" data-qty="Man">Man</div>
+      <div class="quantity-option" data-qty="Woman">Woman</div>
+    </section>
 
-    <div class="setting-group">
-      <label for="country">Country</label>
-      <select id="country">
-        <option value="serbia">Serbia</option>
-        <option value="russia">Russia</option>
-        <option value="usa">USA</option>
-        <option value="germany">Germany</option>
-        <!-- expand as needed -->
-      </select>
-    </div>
-    <hr />
+    <div class="result-label age-label">Age</div>
+    <section class="quantity-control">
+      <div class="quantity-option" data-qty="Zoomer">Zoomer</div>
+      <div class="quantity-option selected" data-qty="Millennial">Millennial</div>
+    </section>
 
-    <div class="setting-group">
-      <label for="theme">Theme</label>
-      <select id="theme">
-        <option value="auto">Auto</option>
-        <option value="light">Light</option>
-        <option value="dark">Dark</option>
-      </select>
-    </div>
-  </div>
+    <div class="result-label weight-label">Weight, kg</div>
+    <section class="quantity-control">
+      <div class="quantity-option" data-qty="Thin">Thin</div>
+      <div class="quantity-option selected" data-qty="Normal">Normal</div>
+      <div class="quantity-option" data-qty="Overweight">Overweight</div>
+    </section>
+  </main>
 
   <script src="settings.js"></script>
 </body>
