--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     <main class="container">
       <header class="header">
         <h1 class="title">Sober</h1>
-        <button class="settings-btn">
+        <a href="settings.html" class="settings-btn">
           <img src="https://i.postimg.cc/9FnMxfzp/settings-24px-x3.png" alt="Settings" />
-        </button>
+        </a>
       </header>
 
       <div class="result-block">
