--- a/settings.html
+++ b/settings.html
@@ -16,7 +16,7 @@
       </button>
     </header>
 
-    <div class="result-label">Blood alcohol concentration, ‰</div>
+    <div class="result-label">BAC, ‰</div>
     <section class="quantity-control">
       <div class="quantity-option selected" data-qty="0.0">0.0</div>
       <div class="quantity-option" data-qty="0.2">0.2</div>
