--- a/settings.html
+++ b/settings.html
@@ -40,7 +40,7 @@
     <section class="quantity-control">
       <div class="quantity-option" data-qty="Thin">Thin</div>
       <div class="quantity-option selected" data-qty="Normal">Normal</div>
-      <div class="quantity-option" data-qty="Overweight">Overweight</div>
+      <div class="quantity-option" data-qty="Overweight">Fat</div>
     </section>
   </main>
 
