--- a/settings.html
+++ b/settings.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Unbounded:wght@600;700;800&display=swap" rel="stylesheet" />
 </head>
-<body>
+<body class="settings-page">
   <main class="container">
     <header class="header">
       <h1 class="title">Settings</h1>
