--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
         </div>
       </section>
 
-      <section class="segmented-control">
-        <div class="segmented-option selected" data-qty="1">1</div>
-        <div class="segmented-option" data-qty="2">2</div>
-        <div class="segmented-option" data-qty="3">3</div>
-        <div class="segmented-option" data-qty="4">4</div>
-        <div class="segmented-option" data-qty="5">5</div>
+      <section class="quantity-control">
+        <div class="quantity-option selected" data-qty="1">1</div>
+        <div class="quantity-option" data-qty="2">2</div>
+        <div class="quantity-option" data-qty="3">3</div>
+        <div class="quantity-option" data-qty="4">4</div>
+        <div class="quantity-option" data-qty="5">5</div>
       </section>
     </main>
 
