--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       </header>
 
       <div class="result-block">
-        <div id="resultHours" class="result-time">0h</div>
+        <div id="resultHours" class="number">0h</div>
         <div class="result-label">Until safe to drive</div>
       </div>
 
