--- a/settings.html
+++ b/settings.html
@@ -16,7 +16,7 @@
       </button>
     </header>
 
-    <div class="result-label">Alchohol limit, ‰</div>
+    <div class="label">Alchohol limit, ‰</div>
     <section class="quantity-control">
       <div class="quantity-option" data-qty="0.0">0.0</div>
       <div class="quantity-option selected" data-qty="0.2">0.2</div>
@@ -25,19 +25,19 @@
 
     <div class="separator"></div>
 
-    <div class="result-label">Gender</div>
+    <div class="label">Gender</div>
     <section class="quantity-control">
       <div class="quantity-option selected" data-qty="Man">Man</div>
       <div class="quantity-option" data-qty="Woman">Woman</div>
     </section>
 
-    <div class="result-label age-label">Age</div>
+    <div class="label age-label">Age</div>
     <section class="quantity-control">
       <div class="quantity-option" data-qty="Zoomer">Zoomer</div>
       <div class="quantity-option selected" data-qty="Millennial">Millennial</div>
     </section>
 
-    <div class="result-label weight-label">Weight, kg</div>
+    <div class="label weight-label">Weight, kg</div>
     <section class="quantity-control">
       <div class="quantity-option" data-qty="Thin">Thin</div>
       <div class="quantity-option selected" data-qty="Normal">Normal</div>
