--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <main class="container">
       <header class="header">
         <h1 class="title">Sober</h1>
-        <button class="settings-btn">
+        <button class="btn">
           <img src="https://i.postimg.cc/9FnMxfzp/settings-24px-x3.png" alt="Settings" />
         </button>
       </header>
