--- a/settings.html
+++ b/settings.html
@@ -11,7 +11,7 @@
   <main class="container">
     <header class="header">
       <h1 class="title">Settings</h1>
-      <button class="settings-btn" onclick="goBack()">
+      <button class="btn" onclick="goBack()">
         <img src="https://i.postimg.cc/ZKRnFNYn/close-24-px-x3.png" alt="Close" />
       </button>
     </header>
