--- a/settings.html
+++ b/settings.html
@@ -17,31 +17,31 @@
     </header>
 
     <div class="label">Alchohol limit, ‰</div>
-    <section class="quantity-control">
-      <div class="quantity-option" data-qty="0.0">0.0</div>
-      <div class="quantity-option selected" data-qty="0.2">0.2</div>
-        <div class="quantity-option" data-qty="0.3">0.3</div>
+    <section class="segmented-control">
+      <div class="segmented-option" data-qty="0.0">0.0</div>
+      <div class="segmented-option selected" data-qty="0.2">0.2</div>
+        <div class="segmented-option" data-qty="0.3">0.3</div>
     </section>
 
     <div class="separator"></div>
 
     <div class="label">Gender</div>
-    <section class="quantity-control">
-      <div class="quantity-option selected" data-qty="Man">Man</div>
-      <div class="quantity-option" data-qty="Woman">Woman</div>
+    <section class="segmented-control">
+      <div class="segmented-option selected" data-qty="Man">Man</div>
+      <div class="segmented-option" data-qty="Woman">Woman</div>
     </section>
 
     <div class="label age-label">Age</div>
-    <section class="quantity-control">
-      <div class="quantity-option" data-qty="Zoomer">Zoomer</div>
-      <div class="quantity-option selected" data-qty="Millennial">Millennial</div>
+    <section class="segmented-control">
+      <div class="segmented-option" data-qty="Zoomer">Zoomer</div>
+      <div class="segmented-option selected" data-qty="Millennial">Millennial</div>
     </section>
 
     <div class="label weight-label">Weight, kg</div>
-    <section class="quantity-control">
-      <div class="quantity-option" data-qty="Thin">Thin</div>
-      <div class="quantity-option selected" data-qty="Normal">Normal</div>
-      <div class="quantity-option" data-qty="Overweight">Fat</div>
+    <section class="segmented-control">
+      <div class="segmented-option" data-qty="Thin">Thin</div>
+      <div class="segmented-option selected" data-qty="Normal">Normal</div>
+      <div class="segmented-option" data-qty="Overweight">Fat</div>
     </section>
   </main>
 
