--- a/settings.html
+++ b/settings.html
@@ -6,6 +6,7 @@
   <title>Settings</title>
   <link rel="stylesheet" href="style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Unbounded:wght@600;700;800&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="component/carousel/carousel.css" />
 </head>
 <body class="settings-page">
   <main class="container">
@@ -38,13 +39,13 @@
     </section>
 
     <div class="label weight-label">Weight, kg</div>
-    <section class="segmented-control">
-      <div class="segmented-option" data-qty="Thin">Thin</div>
-      <div class="segmented-option selected" data-qty="Normal">Normal</div>
-      <div class="segmented-option" data-qty="Overweight">Fat</div>
-    </section>
+    <div class="carousel-wrapper" data-carousel="weight" data-values="50,55,60,65,70,75,80,85,90,95,100">
+    <div class="carousel-indicator"></div>
+    <div class="carousel-control"></div>
+    </div>
   </main>
 
   <script src="settings.js"></script>
+  <script src="component/carousel/carousel.js"></script>
 </body>
 </html>
