--- a/settings.html
+++ b/settings.html
@@ -39,7 +39,7 @@
     </section>
 
     <div class="label weight-label">Weight, kg</div>
-    <div class="carousel-wrapper" data-carousel="weight" data-values="50,55,60,65,70,75,80,85,90,95,100">
+    <div class="carousel-wrapper" data-carousel="weight" data-values="50,55,60,65,70,75,80,85,90,95,100" data-default="95">
     <div class="carousel-indicator"></div>
     <div class="carousel-control"></div>
     </div>
