--- a/settings.html
+++ b/settings.html
@@ -39,9 +39,23 @@
     </section>
 
     <div class="label weight-label">Weight, kg</div>
-    <div class="carousel-wrapper" data-carousel="weight" data-values="50,55,60,65,70,75,80,85,90,95,100" data-default="95">
-    <div class="carousel-indicator"></div>
-    <div class="carousel-control"></div>
+    <div class="carousel-wrapper">
+          <div class="carousel-indicator"></div>
+          <div class="carousel" id="myCarousel">
+            <div class="carousel-padding"></div>
+            <div class="carousel-item">50</div>
+            <div class="carousel-item">55</div>
+            <div class="carousel-item selected">60</div>
+            <div class="carousel-item">65</div>
+            <div class="carousel-item">70</div>
+            <div class="carousel-item">75</div>
+            <div class="carousel-item">80</div>
+            <div class="carousel-item">85</div>
+            <div class="carousel-item">90</div>
+            <div class="carousel-item">95</div>
+            <div class="carousel-item">100</div>
+            <div class="carousel-padding"></div>
+          </div>
     </div>
   </main>
 
