--- a/settings.html
+++ b/settings.html
@@ -33,10 +33,37 @@
     </section>
 
     <div class="label age-label">Age</div>
-    <section class="segmented-control">
-      <div class="segmented-option" data-qty="Zoomer">Zoomer</div>
-      <div class="segmented-option selected" data-qty="Millennial">Millennial</div>
-    </section>
+    <div class="carousel-wrapper">
+      <div class="carousel-indicator"></div>
+      <div class="carousel" id="myCarousel">
+        <div class="carousel-content">
+          <div class="carousel-padding"></div>
+          <div class="carousel-item">18</div>
+          <div class="carousel-item">19</div>
+          <div class="carousel-item">20</div>
+          <div class="carousel-item">21</div>
+          <div class="carousel-item">22</div>
+          <div class="carousel-item">23</div>
+          <div class="carousel-item">24</div>
+          <div class="carousel-item">25</div>
+          <div class="carousel-item">26</div>
+          <div class="carousel-item">27</div>
+          <div class="carousel-item">29</div>
+          <div class="carousel-item">30</div>
+          <div class="carousel-item">31</div>
+          <div class="carousel-item">32</div>
+          <div class="carousel-item selected">33</div>
+          <div class="carousel-item">34</div>
+          <div class="carousel-item">35</div>
+          <div class="carousel-item">36</div>
+          <div class="carousel-item">37</div>
+          <div class="carousel-item">38</div>
+          <div class="carousel-item">39</div>
+          <div class="carousel-item">40</div>
+          <div class="carousel-padding"></div>
+        </div>
+      </div>
+    </div>
 
     <div class="label weight-label">Weight, kg</div>
     
