--- a/settings.html
+++ b/settings.html
@@ -35,7 +35,7 @@
     <div class="label age-label">Age</div>
     <div class="carousel-wrapper">
       <div class="carousel-indicator"></div>
-      <div class="carousel" id="myCarousel">
+      <div class="carousel" data-carousel>
         <div class="carousel-content">
           <div class="carousel-padding"></div>
           <div class="carousel-item">18</div>
@@ -69,7 +69,7 @@
     
     <div class="carousel-wrapper">
       <div class="carousel-indicator"></div>
-      <div class="carousel" id="myCarousel">
+      <div class="carousel" data-carousel>
         <div class="carousel-content">
           <div class="carousel-padding"></div>
           <div class="carousel-item">50</div>
