--- a/settings.html
+++ b/settings.html
@@ -18,15 +18,30 @@
     </header>
 
     <div class="label">Alchohol limit, ‰</div>
-    <section class="segmented-control">
-      <div class="segmented-option" data-qty="0.0">0.0</div>
-      <div class="segmented-option selected" data-qty="0.2">0.2</div>
-        <div class="segmented-option" data-qty="0.3">0.3</div>
-    </section>
+    
+    <div class="carousel-wrapper">
+      <div class="carousel-indicator"></div>
+      <div class="carousel" data-carousel>
+        <div class="carousel-content">
+          <div class="carousel-padding"></div>
+          <div class="carousel-item">0.0</div>
+          <div class="carousel-item">0.1</div>
+          <div class="carousel-item selected">0.2</div>
+          <div class="carousel-item">0.3</div>
+          <div class="carousel-item">0.4</div>
+          <div class="carousel-item">0.5</div>
+          <div class="carousel-item">0.6</div>
+          <div class="carousel-item">0.7</div>
+          <div class="carousel-item">0.8</div>
+          <div class="carousel-padding"></div>
+        </div>
+      </div>
+    </div>
 
     <div class="separator"></div>
 
     <div class="label">Gender</div>
+    
     <section class="segmented-control">
       <div class="segmented-option selected" data-qty="Man">Man</div>
       <div class="segmented-option" data-qty="Woman">Woman</div>
