--- a/settings.html
+++ b/settings.html
@@ -17,7 +17,7 @@
       </button>
     </header>
 
-    <div class="label">Alchohol limit, ‰</div>
+    <div class="label">Alchohol limit ‰</div>
     
     <div class="carousel-wrapper">
       <div class="carousel-indicator"></div>
@@ -80,7 +80,7 @@
       </div>
     </div>
 
-    <div class="label weight-label">Weight, kg</div>
+    <div class="label weight-label">Weight kg</div>
     
     <div class="carousel-wrapper">
       <div class="carousel-indicator"></div>
