--- a/index.html
+++ b/index.html
@@ -55,5 +55,6 @@
     </main>
 
     <script src="script.js"></script>
+    <script src="component/carousel/carousel.js"></script>
   </body>
 </html>
