--- a/index.html
+++ b/index.html
@@ -45,13 +45,26 @@
         </div>
       </section>
 
-      <section class="segmented-control">
-        <div class="segmented-option selected" data-qty="1">1</div>
-        <div class="segmented-option" data-qty="2">2</div>
-        <div class="segmented-option" data-qty="3">3</div>
-        <div class="segmented-option" data-qty="4">4</div>
-        <div class="segmented-option" data-qty="5">5</div>
-      </section>
+      <div class="carousel-wrapper">
+      <div class="carousel-indicator"></div>
+      <div class="carousel" data-carousel>
+        <div class="carousel-content">
+          <div class="carousel-padding"></div>
+          <div class="carousel-item selected">1</div>
+          <div class="carousel-item">2</div>
+          <div class="carousel-item">3</div>
+          <div class="carousel-item">4</div>
+          <div class="carousel-item">5</div>
+          <div class="carousel-item">6</div>
+          <div class="carousel-item">7</div>
+          <div class="carousel-item">8</div>
+          <div class="carousel-item">9</div>
+          <div class="carousel-item">10</div>
+          <div class="carousel-padding"></div>
+        </div>
+      </div>
+    </div>
+      
     </main>
 
     <script src="script.js"></script>
