--- a/index.html
+++ b/index.html
@@ -50,16 +50,16 @@
       <div class="carousel" data-carousel>
         <div class="carousel-content">
           <div class="carousel-padding"></div>
-          <div class="carousel-item selected">1</div>
-          <div class="carousel-item">2</div>
-          <div class="carousel-item">3</div>
-          <div class="carousel-item">4</div>
-          <div class="carousel-item">5</div>
-          <div class="carousel-item">6</div>
-          <div class="carousel-item">7</div>
-          <div class="carousel-item">8</div>
-          <div class="carousel-item">9</div>
-          <div class="carousel-item">10</div>
+          <div class="carousel-item selected" data-qty="1">1</div>
+          <div class="carousel-item" data-qty="2">2</div>
+          <div class="carousel-item" data-qty="3">3</div>
+          <div class="carousel-item" data-qty="4">4</div>
+          <div class="carousel-item" data-qty="5">5</div>
+          <div class="carousel-item" data-qty="6">6</div>
+          <div class="carousel-item" data-qty="7">7</div>
+          <div class="carousel-item" data-qty="8">8</div>
+          <div class="carousel-item" data-qty="9">9</div>
+          <div class="carousel-item" data-qty="10">10</div>
           <div class="carousel-padding"></div>
         </div>
       </div>
