--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <title>Sober</title>
     <link href="https://fonts.googleapis.com/css2?family=Unbounded:wght@600;700;800&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="component/carousel/carousel.css" />
     <link rel="manifest" href="manifest.json" />
     <link rel="apple-touch-icon" href="sober-icon-512.png" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
