--- a/settings.html
+++ b/settings.html
@@ -42,6 +42,7 @@
           <div class="carousel-item">25</div>
           <div class="carousel-item">26</div>
           <div class="carousel-item">27</div>
+          <div class="carousel-item">28</div>
           <div class="carousel-item">29</div>
           <div class="carousel-item">30</div>
           <div class="carousel-item">31</div>
