--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
       <div class="carousel-wrapper">
         <div class="carousel" data-carousel>
           <div class="carousel-indicator"></div>
+          <div class="carousel-inner">
           <div class="carousel-content">
             <div class="carousel-padding"></div>
             <div class="carousel-item selected" data-qty="1">1</div>
@@ -61,6 +62,7 @@
             <div class="carousel-item" data-qty="9">9</div>
             <div class="carousel-item" data-qty="10">10</div>
             <div class="carousel-padding"></div>
+          </div>
           </div>
         </div>
       </div>
@@ -86,6 +88,7 @@
       <div class="carousel-wrapper">
         <div class="carousel" data-carousel>
         <div class="carousel-indicator"></div>
+          <div class="carousel-inner">
           <div class="carousel-content">
             <div class="carousel-padding"></div>
             <div class="carousel-item">50</div>
@@ -101,6 +104,7 @@
             <div class="carousel-item">100</div>
             <div class="carousel-padding"></div>
           </div>
+          </div>
         </div>
       </div>
 
@@ -108,6 +112,7 @@
       <div class="carousel-wrapper">
         <div class="carousel" data-carousel>
         <div class="carousel-indicator"></div>
+          <div class="carousel-inner">
           <div class="carousel-content">
             <div class="carousel-padding"></div>
             <div class="carousel-item">0.0</div>
@@ -120,6 +125,7 @@
             <div class="carousel-item">0.7</div>
             <div class="carousel-item">0.8</div>
             <div class="carousel-padding"></div>
+          </div>
           </div>
         </div>
       </div>
